feat: Implement puzzle generation with difficulty, PWA support, SEO metadata, and new visual assets.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Photo Sudoku</title>
+  <title>Sudoku Helper</title>
+
+  <!-- SEO -->
+  <meta name="description"
+    content="A minimalist, intelligent Sudoku assistant and solver. Upload photos of paper puzzles or play online with a distraction-free monochrome design.">
+  <meta name="keywords" content="sudoku, monochrome, minimal, solver, puzzle, photo sudoku, web game, logic">
+  <meta name="author" content="Sudoku Helper">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Monochrome Sudoku">
+  <meta property="og:description"
+    content="Intelligent Assistant. Paper Puzzles. Experience Sudoku in a distraction-free monochrome environment.">
+  <meta property="og:image" content="og-image.svg">
+  <meta property="og:url" content="https://sudoku.helper">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:title" content="Monochrome Sudoku">
+  <meta property="twitter:description"
+    content="Intelligent Assistant. Paper Puzzles. Experience Sudoku in a distraction-free monochrome environment.">
+  <meta property="twitter:image" content="og-image.svg">
+
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="manifest" href="manifest.json">
+
+  <!-- Fonts (Performance: Preconnect & Direct Link) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400&family=Source+Serif+4:ital,opsz,wght@0,8..60,400;0,8..60,600;1,8..60,400&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -32,13 +66,30 @@
       </div>
 
       <div class="card">
+        <label
+          style="font-family: var(--font-mono); font-size: 0.75rem; display: block; margin-bottom: 0.5rem; color: var(--muted-foreground);">NEW
+          GAME</label>
+        <div class="button-group">
+          <select id="diff-select"
+            style="padding: 0.5rem; font-family: var(--font-mono); border: var(--border-medium); background: white; width: 100%;">
+            <option value="1">Easy</option>
+            <option value="2">Medium</option>
+            <option value="3">Hard</option>
+            <option value="4">Expert</option>
+            <option value="5">Master</option>
+          </select>
+          <button id="btn-generate" class="primary">Generate</button>
+        </div>
+
+        <hr style="border: 0; border-top: 1px solid #E5E5E5; margin: 2rem 0;">
+
         <div class="button-group">
           <button id="btn-hint" class="primary">Next Hint</button>
           <button id="btn-apply" class="secondary">Apply Hint</button>
           <button id="btn-candidates" class="secondary">Candidates</button>
           <button id="btn-clear-colors" class="secondary">Clear Colors</button>
         </div>
-        
+
         <!-- Divider -->
         <hr style="border: 0; border-top: 4px solid #000; margin: 2rem 0;">
 
@@ -48,7 +99,7 @@
           <button id="btn-lock" class="secondary">Lock Clues</button>
           <button id="btn-clear" class="secondary">Clear Grid</button>
         </div>
-        
+
         <!-- Divider -->
         <hr style="border: 0; border-top: 1px solid #E5E5E5; margin: 2rem 0;">
 
