feat: hide photo upload UI and implement comprehensive mobile responsiveness improvements.

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       <div class="card">
         <div id="uploadArea" class="upload-box">
           <p style="font-family: var(--font-mono); font-weight: 700; font-size: 1.25rem;">[ UPLOAD PHOTO ]</p>
-          <p style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--muted-foreground);">Drag & drop or Click</p>
+          <p style="margin-top: 0.5rem; font-size: 0.875rem; color: var(--muted-foreground);">Tap or Drag & Drop</p>
           <input type="file" id="imageUpload" accept="image/*" style="display:none;">
           <img id="uploadedImage" alt="Sudoku Reference">
         </div>
 
         <div id="message">
-          Upload a photo or enter numbers manually to start.
+          Enter numbers manually to start.
         </div>
       </div>
 
