feat: Rename UI buttons, enable direct input overwrite, and enhance URL puzzle loading with validation and clue locking.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <hr style="border: 0; border-top: 4px solid #000; margin: 2rem 0;">
 
         <div class="button-group">
-          <button id="btn-check" class="secondary">Check Rules</button>
-          <button id="btn-solve" class="secondary">Solve Grid</button>
+          <button id="btn-check" class="secondary">Check Conflicts</button>
+          <button id="btn-solve" class="secondary">Verify Solution</button>
           <button id="btn-lock" class="secondary">Lock Clues</button>
           <button id="btn-clear" class="secondary">Clear Grid</button>
         </div>
@@ -104,10 +104,9 @@
         <hr style="border: 0; border-top: 1px solid #E5E5E5; margin: 2rem 0;">
 
         <div class="button-group">
-          <button id="btn-export" class="secondary">Save</button>
-          <button id="btn-import" class="secondary">Load</button>
-          <button id="btn-share" class="secondary">Share</button>
-          <button id="btn-load-url" class="secondary">URL</button>
+          <button id="btn-export" class="secondary">Save as File</button>
+          <button id="btn-import" class="secondary">Load File</button>
+          <button id="btn-share" class="secondary">Copy Link</button>
           <input type="file" id="importFile" accept=".txt,.sudoku,text/plain" style="display:none;">
         </div>
       </div>
